--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>poortofoolio</title>
     <link rel="stylesheet" type="text/css" href="css/master.css">
+
+     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet"> 
   </head>
   <body>
     <div class="wrapper" align="center">
