Added button function

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>poortofoolio</title>
     <link rel="stylesheet" type="text/css" href="css/master.css">
 
-     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet"> 
+     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper" align="center">
@@ -52,6 +52,30 @@
           </div>
         </div>
       </div>
+      <!-- tabs -->
+      <div class="page-container  col-12">
+        <div class="page border shadow hidden" id="about-page">
+          about page
+        </div>
+      </div>
+      <div class="page-container  col-12">
+        <div class="page border shadow hidden" id="projects-page">
+          projects page
+        </div>
+      </div>
+      <div class="page-container  col-12">
+        <div class="page border shadow hidden" id="contact-page">
+          contact page
+        </div>
+      </div>
+      <div class="page-container  col-12">
+        <div class="page border shadow hidden" id="social-page">
+          social page
+        </div>
+      </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" charset="utf-8"></script>
+    <script src="js/jquery.simpleWeather.min.js" charset="utf-8"></script>
+    <script src="js/script.js" charset="utf-8"></script>
   </body>
 </html>
