Changes to icon frame, added clock and weather + animated gif for rain

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>poortofoolio</title>
     <link rel="stylesheet" type="text/css" href="css/master.css">
-
-     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   </head>
-  <body>
+  <body onload="start()">
     <div class="wrapper" align="center">
       <div class="title-bar-container col-12">
         <div class="title-bar border shadow">
@@ -18,13 +17,18 @@
       <div class="container ">
         <div class="header ">
           <div class="icon col-3">
-            <div class="picture border shadow">
-              <img src="res/slowjak.png" alt="slow">
+            <div class="picture border shadow background">
+              <img src="" alt="" class="weather-image">
+              <div class="time" id="time"></div>
+              <div class="weather" id="weather"></div>
             </div>
           </div>
           <div class="info  col-9">
             <div class="info-box border shadow">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              中國#1！</br>
+              指供日士拳伊問様者彩翼事込全責。設権毛続見共姿進効福音測康売静問。編真進見真先算南読情術禁行食丸療常離紙。最内面証置吸分団当日断謀年同襲金。壁塩了外記胸末千鈴文汚一暑生供。江平報演産西阪電絶投氷堂縛験野期道軽者。就知真小良温真稿掲爆平意上上節函。権内聞調館術雨導日中変著中話捕派京本。国歓速職沖梨歩察安属思責紀先報会。
+
+済五背探世朝介横集右状事変保退経今変軍。夜子埼健護投玉講殺連著手千人護郎業処治要。雑寺思性旅存野能員細連者柔月。心北大断県革経玲川見上一式
             </div>
           </div>
         </div>
@@ -75,7 +79,9 @@
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" charset="utf-8"></script>
-    <script src="js/jquery.simpleWeather.min.js" charset="utf-8"></script>
+    <script src="js/jquery.simpleWeather.js" charset="utf-8"></script>
     <script src="js/script.js" charset="utf-8"></script>
+    <script src="js/weather.js" charset="utf-8"></script>
+    <script src="js/clock.js" charset="utf-8"></script>
   </body>
 </html>
